study/output-buggy/ep_output/Closure-32
/Users/stylethinking/Documents/StaticBugCheckers/defects4j/projects/b/Closure-32/src/com/google/javascript/jscomp/parsing/JsDocInfoParser.java:849: error: [MissingCasesInEnumSwitch] Non-exhaustive switch; either add a default or handle the remaining cases: AUTHOR, CONSISTENTIDGENERATOR, CONSTANT, and 38 others
                    switch (annotation) {
                    ^
    (see http://errorprone.info/bugpattern/MissingCasesInEnumSwitch)
1 error
